edit test file for github pages

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
   <title>Test page</title>
 </head>
 <body>
-  <h1>WHATS UP FOLKS</h1>
+  <header class="container center-align">
+    <h1>LetsHang App</h1>
+  </header>
+
+<div class="container">
+  {% block content %}
+  {% endblock %}
+</div>
+
 </body>
 </html>
